--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,7 @@ button#centered-button a {
 }
 
 button#centered-button:hover {
-    background-color: #0055AA;
+    background-color: #068563;
 }
 
 #article-title-container,
